Allow the ability to place additional blocks from the NBT in `TreeFromStructureNBTFeature`. Bump version to `1.0.0.25`.